[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scenes/maindoorpanel/panel-transbordador.jpg" type="Texture" id=1]
[ext_resource path="res://Dialog/Dialog.tscn" type="PackedScene" id=2]
[ext_resource path="res://UI/Inventory/UI_Inventory.tscn" type="PackedScene" id=3]
[ext_resource path="res://UI/Pause/pause.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/maindoorpanel/gofre.png" type="Texture" id=5]
[ext_resource path="res://Scenes/maindoorpanel/cable.png" type="Texture" id=6]
[ext_resource path="res://Scenes/maindoorpanel/microchip.png" type="Texture" id=7]
[ext_resource path="res://Scenes/maindoorpanel/maindoorpanel.gd" type="Script" id=10]
[ext_resource path="res://UI/Menu/back.tscn" type="PackedScene" id=11]

[node name="maindoorpanel" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 3.0
texture = ExtResource( 1 )
expand = true

[node name="gear2" type="TextureRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 573.539
margin_top = 645.173
margin_right = -1158.46
margin_bottom = -279.827
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="gear" type="TextureButton" parent="."]
margin_left = 588.0
margin_top = 629.0
margin_right = 785.0
margin_bottom = 815.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="chip2" type="TextureRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 953.262
margin_top = 648.574
margin_right = -890.738
margin_bottom = -283.426
texture = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="chip" type="TextureButton" parent="."]
margin_left = 944.672
margin_top = 620.091
margin_right = 1039.67
margin_bottom = 815.091
__meta__ = {
"_edit_use_anchors_": false
}

[node name="wire2" type="TextureRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1199.15
margin_top = 627.193
margin_right = -547.85
margin_bottom = -195.807
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="wire" type="TextureButton" parent="."]
margin_left = 1155.0
margin_top = 618.0
margin_right = 1255.0
margin_bottom = 831.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="back2" parent="." instance=ExtResource( 11 )]
previous_scene = "Main"

[node name="Dialog" parent="." instance=ExtResource( 2 )]
visible = false

[node name="UI_Inventory" parent="." instance=ExtResource( 3 )]

[node name="pause" parent="." instance=ExtResource( 4 )]
[connection signal="pressed" from="gear" to="." method="_on_gear_pressed"]
[connection signal="pressed" from="chip" to="." method="_on_chip_pressed"]
[connection signal="pressed" from="wire" to="." method="_on_wire_pressed"]
